# python_project_template

./: .pylintrc  .pylintrc_disable_all  pyproject.toml
temp/gitignore-everything/: .gitignore
